--- a/docs/blog/.travis.yml
+++ b/docs/blog/.travis.yml
@@ -1,11 +1,19 @@
 sudo: false
 language: node_js
 node_js:
-  - 10 # use nodejs v10 LTS
+  - 16 # use nodejs v10 LTS
 cache: npm
 branches:
   only:
-    - main # build master branch only
+    - blog # build master branch only
+before_install:
+- export TZ='Asia/Shanghai'
+- npm install hexo -g
+- npm install gulp-cli -g
+
+install:
+- npm install
+
 script:
   - hexo generate # generate static files
 deploy:
@@ -14,5 +22,5 @@ deploy:
   github-token: $GH_TOKEN
   keep-history: true
   on:
-    branch: main
+    branch: blog
   local-dir: public
