--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hexo-tag-aplayer": "^3.0.4",
     "hexo-tag-dplayer": "^0.3.3",
     "hexo-theme-landscape": "^0.0.3",
+    "hexo-web-push-notification": "^0.4.0",
     "hexo-wordcount": "^6.0.1"
   }
 }
