--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
     "hexo-tag-aplayer": "^3.0.4",
-    "hexo-tag-dplayer": "^0.3.3",
     "hexo-theme-landscape": "^0.0.3",
-    "hexo-web-push-notification": "^0.4.0",
     "hexo-wordcount": "^6.0.1"
+  },
+  "devDependencies": {
+    "hexo-feed-new": "^1.1.2"
   }
 }
