--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@neilsustc/markdown-it-katex": "^1.0.0",
     "hexo": "^6.3.0",
     "hexo-abbrlink": "^2.2.1",
-    "hexo-butterfly-extjs": "^1.3.0",
+    "hexo-butterfly-extjs": "^1.0.0",
+    "hexo-deployer-git": "^3.0.0",
     "hexo-external-link": "^1.0.9",
     "hexo-filter-github-emojis": "^3.0.5",
     "hexo-generator-archive": "^2.0.0",
