--- a/_config.yml
+++ b/_config.yml
@@ -175,6 +175,7 @@ markdown:
       name: '@neilsustc/markdown-it-katex'
       options:
         strict: false
+        
 aplayer:
   meting: true
   asset_inject: false
@@ -187,3 +188,4 @@ deploy:
   branch: main
   message: 'update'
   token: 980120b75d44ce11501f49a42850819ceb3372c5
+  ignore_hidden: false
